tests/fixtures/invalid/none_rshift_list.py
# Cannot right shift None and List[int]
x: None = None >> [1, 2, 3]
